--- a/java/moveplus/pom.xml
+++ b/java/moveplus/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
-    <artifactId>move-plus-data-colector</artifactId>
+    <artifactId>moveplus</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -15,7 +15,7 @@
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
             <version>5.3.0</version>
-            </dependency>
+        </dependency>
     </dependencies>
-    <name>move-plus-data-colector</name>
+    <name>moveplus</name>
 </project>
