OSHI funcional e telas swing estáticas

--- a/java/moveplus/pom.xml
+++ b/java/moveplus/pom.xml
@@ -16,6 +16,35 @@
             <artifactId>oshi-core</artifactId>
             <version>5.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>KGradientPanel</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>KControls</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+	<groupId>be.ceau</groupId>
+	<artifactId>chart</artifactId>
+	<version>2.6.0</version>
+</dependency>
+
     </dependencies>
     <name>moveplus</name>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 </project>
