--- a/projeto/api/package.json
+++ b/projeto/api/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mssql": "^6.2.3",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "sequelize": "^6.3.5"
   }
 }
