--- a/java/moveplus/pom.xml
+++ b/java/moveplus/pom.xml
@@ -54,6 +54,14 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.3.1</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20201115</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
