Ajustes nos alertas, inserindo e atribuindo dados de ConfigTerminal quando necessário, organização e detalhamento do código

--- a/java/moveplus/pom.xml
+++ b/java/moveplus/pom.xml
@@ -70,7 +70,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.mycompany.moveplus.TelaLogin</mainClass>
+                            <mainClass>com.mycompany.moveplus.Run</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -98,7 +98,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <!-- <classpathPrefix>lib</classpathPrefix> -->
-                            <mainClass>com.mycompany.moveplus.TelaLogin</mainClass>
+                            <mainClass>com.mycompany.moveplus.Run</mainClass>
                         </manifest>
                         <manifestEntries>
                             <Class-Path>lib/</Class-Path>
